# autoware.universe

./: .pre-commit-config.yaml  err-universe.txt  mtt-aw-hash.repos
common/autoware_boundary_departure_checker/: CMakeLists.txt
common/autoware_boundary_departure_checker/test/: test_plot_utils.cpp  test_plot_utils.hpp  test_uncrossable_boundary_checker.cpp
common/autoware_boundary_departure_checker/test/footprint_generator/: test_footprint_generator.cpp
common/autoware_boundary_departure_checker/test/utils/: test_calc_max_search_length_for_boundaries.cpp  test_create_vehicle_footprints.cpp
control/autoware_lane_departure_checker/: README.md
control/autoware_lane_departure_checker/config/: lane_departure_checker.param.yaml
control/autoware_lane_departure_checker/schema/: lane_departure_checker.json
control/autoware_mpc_lateral_controller/: CMakeLists.txt
control/autoware_mpc_lateral_controller/param/: steer_offset.param.yaml
control/autoware_mpc_lateral_controller/src/: lowpass_filter.cpp  mpc_lateral_controller.cpp
control/autoware_trajectory_follower_node/src/: controller_node.cpp
control/autoware_trajectory_follower_node/test/: test_controller_node.cpp
control/control_performance_analysis/: package.xml
control/joy_controller/: package.xml
control/lane_departure_checker/: package.xml
control/obstacle_collision_checker/: package.xml
control/operation_mode_transition_manager/: package.xml
control/pure_pursuit/: package.xml
control/shift_decider/: package.xml
control/trajectory_follower/: package.xml
control/trajectory_follower_nodes/: package.xml
control/vehicle_cmd_gate/: package.xml
latest/: 404.html  index.html  sitemap.xml
latest/CODE_OF_CONDUCT/: index.html
latest/CONTRIBUTING/: index.html
latest/DISCLAIMER/: index.html
latest/common/: index.html
latest/planning/: index.html
localization/ekf_localizer/: package.xml
localization/gyro_odometer/: package.xml
localization/localization_error_monitor/: package.xml
localization/ndt_scan_matcher/: package.xml
localization/pose2twist/: package.xml
localization/pose_initializer/: package.xml
localization/stop_filter/: package.xml
localization/twist2accel/: package.xml
main/: 404.html  index.html  sitemap.xml
main/CODE_OF_CONDUCT/: index.html
main/CONTRIBUTING/: index.html
main/DISCLAIMER/: index.html
main/common/: index.html
main/planning/: index.html
main/search/: search_index.json
perception/autoware_bevfusion/: package.xml
perception/autoware_crosswalk_traffic_light_estimator/: package.xml
perception/autoware_multi_object_tracker/: CMakeLists.txt
perception/autoware_traffic_light_arbiter/: package.xml
perception/autoware_traffic_light_category_merger/: package.xml
perception/autoware_traffic_light_classifier/: package.xml
perception/autoware_traffic_light_fine_detector/: package.xml
perception/autoware_traffic_light_map_based_detector/: package.xml
perception/autoware_traffic_light_multi_camera_fusion/: package.xml
perception/autoware_traffic_light_occlusion_predictor/: package.xml
perception/autoware_traffic_light_selector/: package.xml
perception/autoware_traffic_light_visualization/: package.xml
perception/compare_map_segmentation/: CMakeLists.txt
perception/occupancy_grid_map_outlier_filter/: CMakeLists.txt
planning/autoware_diffusion_planner/: README.md
planning/autoware_rtc_interface/: package.xml
planning/autoware_trajectory_modifier/: README.md
planning/autoware_trajectory_optimizer/: README.md
planning/autoware_trajectory_safety_filter/: CMakeLists.txt
planning/autoware_trajectory_safety_filter/include/autoware/trajectory_safety_filter/: safety_filter_interface.hpp  trajectory_safety_filter_node.hpp
planning/autoware_trajectory_safety_filter/include/autoware/trajectory_safety_filter/filters/: collision_filter.hpp  out_of_lane_filter.hpp  vehicle_constraint_filter.hpp
planning/autoware_trajectory_safety_filter/src/: trajectory_safety_filter_node.cpp
planning/autoware_trajectory_safety_filter/src/filters/: collision_filter.cpp  out_of_lane_filter.cpp  vehicle_constraint_filter.cpp
planning/autoware_trajectory_safety_filter/test/dummy_plugin/: dummy_plugins.xml  dummy_safety_filter_plugin.cpp
planning/autoware_trajectory_safety_filter/test/node/: test_trajectory_safety_filter_node.cpp
planning/autoware_trajectory_safety_filter/test/plugins/: test_vehicle_constraint_filter.cpp
planning/behavior_path_planner/: package.xml
planning/behavior_velocity_planner/: package.xml
planning/costmap_generator/: package.xml
planning/external_velocity_limit_selector/: package.xml
planning/freespace_planner/: package.xml
planning/mission_planner/: package.xml
planning/motion_velocity_smoother/: package.xml
planning/obstacle_avoidance_planner/: package.xml
planning/obstacle_cruise_planner/: package.xml
planning/obstacle_stop_planner/: package.xml
planning/planning_debug_tools/: package.xml
planning/planning_error_monitor/: package.xml
planning/planning_evaluator/: package.xml
planning/rtc_auto_mode_manager/: package.xml
planning/rtc_interface/: package.xml
planning/scenario_selector/: package.xml
planning/surround_obstacle_checker/: package.xml
sensing/geo_pos_conv/: package.xml
sensing/gnss_poser/: package.xml
sensing/image_transport_decompressor/: package.xml
sensing/imu_corrector/: package.xml
sensing/pointcloud_preprocessor/: CMakeLists.txt  package.xml
sensing/probabilistic_occupancy_grid_map/: package.xml
vehicle/autoware_steer_offset_estimator/: CMakeLists.txt  README.md  package.xml
vehicle/autoware_steer_offset_estimator/config/: steer_offset_estimator.param.yaml
vehicle/autoware_steer_offset_estimator/include/autoware/steer_offset_estimator/: steer_offset_estimator.hpp  structs.hpp
vehicle/autoware_steer_offset_estimator/launch/: steer_offset_estimator.launch.xml
vehicle/autoware_steer_offset_estimator/schema/: steer_offset_estimator.schema.json
vehicle/autoware_steer_offset_estimator/src/: node.cpp  node.hpp  steer_offset_estimator.cpp
(+1348 files in other folders)
