<?xml version="1.0"?>
<package format="3">
  <name>autoware_rtc_interface</name>
  <version>0.50.0</version>
  <description>The autoware_rtc_interface package</description>

  <maintainer email="kyoichi.sugahara@tier4.jp">Kyoichi Sugahara</maintainer>
  <maintainer email="satoshi.ota@tier4.jp">Satoshi Ota</maintainer>
  <maintainer email="yukinari.hisaki.2@tier4.jp">Yukinari Hisaki</maintainer>

  <license>Apache License 2.0</license>

  <author email="fumiya.watanabe@tier4.jp">Fumiya Watanabe</author>
  <author email="taiki.tanaka@tier4.jp">Taiki Tanaka</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>autoware_qos_utils</depend>
  <depend>autoware_utils</depend>
  <depend>rclcpp</depend>
  <depend>tier4_rtc_msgs</depend>
  <depend>unique_identifier_msgs</depend>

  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>
  <test_depend>autoware_test_utils</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
